# m5paper-hello-world

./: .gitmodules
esp-idf/: CMakeLists.txt  README.md  project_include.cmake
esp-idf/components/m5epd/: CMakeLists.txt
esp-idf/components/m5epd/src/utility/: GT911.cpp
esp-idf/main/: CMakeLists.txt  application.cpp  application.hpp  hello_world_main.cpp  idf_component.yml  nv_config.cpp  nv_config.hpp
